--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:background="#DEDAD5"
     android:layout_height="match_parent"
     android:padding="25dp"
+    android:background="#DEDAD5"
     tools:context=".MainActivity">
-
 
     <TextView
         android:id="@+id/total_question"
@@ -18,80 +17,87 @@
         android:text="Total Question"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:textColor="#F44336"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:textStyle="bold"
-        />
+        android:textColor="#F44336"/>
 
     <TextView
         android:id="@+id/question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="This will be the question"
-        android:layout_marginTop="120dp"
         android:layout_centerHorizontal="true"
-        android:textColor="#020000"
-        android:textSize="22dp"
-        android:layout_above="@+id/choices_layout"
+        android:layout_marginTop="120dp"
+        android:textSize="22sp"
         android:textStyle="bold"
-        />
-    
+        android:textColor="#020000"/>
+
     <LinearLayout
+        android:id="@+id/choices_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/choices_layout"
         android:layout_centerInParent="true"
-        android:orientation="vertical">
-        
+        android:orientation="vertical"
+        android:layout_below="@id/question">
+
         <Button
             android:id="@+id/ans_a"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#FFFFFF"
             android:text="Ans A"
+            android:textSize="25sp"
             android:textColor="@color/black"
-            android:textSize="25dp"
-            />
+            android:backgroundTint="#FFFFFF"
+            android:layout_marginBottom="10dp"/>
 
         <Button
             android:id="@+id/ans_b"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#FFFFFF"
             android:text="Ans B"
+            android:textSize="25sp"
             android:textColor="@color/black"
-            android:textSize="25dp"
-            />
+            android:backgroundTint="#FFFFFF"
+            android:layout_marginBottom="10dp"/>
 
         <Button
             android:id="@+id/ans_c"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#FFFFFF"
             android:text="Ans C"
+            android:textSize="25sp"
             android:textColor="@color/black"
-            android:textSize="25dp"
-            />
+            android:backgroundTint="#FFFFFF"
+            android:layout_marginBottom="10dp"/>
 
         <Button
             android:id="@+id/ans_d"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#FFFFFF"
             android:text="Ans D"
+            android:textSize="25sp"
             android:textColor="@color/black"
-            android:textSize="25dp"
-            />
+            android:backgroundTint="#FFFFFF"
+            android:layout_marginBottom="10dp"/>
     </LinearLayout>
+
     <Button
         android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#F44336"
         android:text="Submit"
+        android:textSize="25sp"
         android:textColor="@color/black"
-        android:layout_below="@id/choices_layout"
-        android:textSize="25dp"
-        />
-    
+        android:backgroundTint="#F44336"
+        android:layout_below="@id/choices_layout"/>
+
+    <!-- Logo ImageView -->
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="800dp"
+        android:layout_height="100dp"
+        android:src="@drawable/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="20dp"/>
 </RelativeLayout>
